bk_ida/gccida/g1/gen_push
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_push/src/i386.c:4406:32: error: use of undeclared identifier 'machine_mode'
v1 = gen_rtx_fmt_e( PRE_DEC, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), global_rtl[2]); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_push/src/i386.c:4407:21: error: use of undeclared identifier 'machine_mode'
v2 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v1); 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_push/src/obj/i386.o] Error 1
